footer,Sobre e Privacy

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Bem-vindo</h1>
-    <p> Este e um projeto em desenvolvimento feito com o objetivo de mostrar habilidades em CRUD usando C#.
+    <p> Este e um projeto em desenvolvimento feito com o objetivo de mostrar habilidades em CRUD usando C#.</p>
+    <br/>
+    <img src="https://cdn.pixabay.com/photo/2020/06/22/04/20/earth-5327559_1280.png" 
+         alt="Planeta Terra" 
+         width="300">
 </div>
