--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Politica de Privacidade";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Este projeto foi desenvolvido exclusivamente para fins de avaliação técnica.</p>
-<p>Licença: MIT (Livre para estudo e modificação).</p>
-<p>Dados: Os dados inseridos no banco de dados SQLite são fictícios ou para fins de teste.</p>
+
+<div class="text-center">
+    <h1>@ViewData["Title"]</h1>
+    <p>Este projeto foi desenvolvido exclusivamente para fins de avaliação técnica.</p>
+    <p>Licença: MIT (Livre para estudo e modificação).</p>
+    <p>Dados: Os dados inseridos no banco de dados SQLite são fictícios ou para fins de teste.</p>
+</div>
