--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 </div>
 
 <footer class="border-top footer text-muted">
-    <div class="container">
+    <div class="container d-flex justify-content-center align-items-center">
         &copy; 2026 - Desafio Paises v0.1 by Thales Vaz
     </div>
 </footer>
