--- a/Views/Paises/Details.cshtml
+++ b/Views/Paises/Details.cshtml
@@ -4,69 +4,91 @@
     ViewData["Title"] = "Detalhes";
 }
 
-<h1>Detalhes</h1>
+<h1 style="text-align: center">Detalhes</h1>
 
-<div>
-    <h4>País</h4>
+<div class="container">
+    <div class="d-flex align-items-center mb-2">
+        @if (!string.IsNullOrEmpty(Model.Sigla))
+        {
+            <img src="https://flagcdn.com/w80/@(Model.Sigla.ToLower()).png"
+                 width="60"
+                 class="me-3 shadow-sm rounded border"
+                 alt="Bandeira de @Model.Nome"
+                 onerror="this.style.display='none'">
+        }
+        <h4 class="mb-0">Dados do País</h4>
+    </div>
     <hr/>
+
     <dl class="row">
-        <dt class="col-sm-2">
+        <dt class="col-sm-2 font-weight-bold">
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nome)
         </dd>
-        <dt class="col-sm-2">
+
+        <dt class="col-sm-2 font-weight-bold">
             População
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Populacao)
         </dd>
-        <dt class="col-sm-2">
+
+        <dt class="col-sm-2 font-weight-bold">
             DDI
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Ddi)
         </dd>
-        <dt class="col-sm-2">
+
+        <dt class="col-sm-2 font-weight-bold">
             Área Total (km²)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.AreaTotal)
         </dd>
-        <dt class="col-sm-2">
+
+        <dt class="col-sm-2 font-weight-bold">
             @Html.DisplayNameFor(model => model.Sigla)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Sigla)
         </dd>
-        <dt class="col-sm-2">
+
+        <dt class="col-sm-2 font-weight-bold">
             @Html.DisplayNameFor(model => model.Idioma)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Idioma)
         </dd>
-        <dt class="col-sm-2">
+
+        <dt class="col-sm-2 font-weight-bold">
             @Html.DisplayNameFor(model => model.Continente)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Continente)
         </dd>
-        <dt class="col-sm-2">
+
+        <dt class="col-sm-2 font-weight-bold">
             ONU
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PaisOnu)
+            @(Model.PaisOnu ? "Membro da ONU" : "Não Membro")
         </dd>
-        <dt class="col-sm-2">
+
+        <dt class="col-sm-2 font-weight-bold">
             Fundação
         </dt>
         <dd class="col-sm-10">
             @Model.Fundacao.ToString("dd/MM/yyyy")
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
-    <a asp-action="Index">Voltar para Lista</a>
+
+    <div class="row mt-4">
+        <div class="col-sm-10 offset-sm-2">
+            <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary">Editar</a>
+            <a asp-action="Index" class="btn btn-outline-secondary ms-2">Voltar para Lista</a>
+        </div>
+    </div>
 </div>
